--- a/vacation_search/vacation_search.ipynb
+++ b/vacation_search/vacation_search.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,6 +17,7 @@
     "import pandas as pd\n",
     "import requests\n",
     "import gmaps\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "# Import API key\n",
     "from config import g_key\n",
@@ -27,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +150,7 @@
        "4          84       11.34      NZ  2022-01-26 23:17:56  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +380,7 @@
        "23          20        1.01      US  2022-01-26 23:09:09  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +414,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +576,7 @@
        "23                 Kapaa      US     79.12  22.0752 -159.3190           "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,16 +584,15 @@
    "source": [
     "# 5a. Create DataFrame called hotel_df to store hotel names along with city, country, max temp, and coordinates.\n",
     "hotel_df = preferred_cities_df[[\"City\", \"Country\", \"Max Temp\", \"Lat\", \"Lng\"]].copy()\n",
-    "hotel_df[\"Hotel Name\"] = \"\"\n",
-    "hotel_df.head(10)\n",
+    "\n",
     "# 5b. Create a new column \"Hotel Name\"\n",
-    "#hotel_df[\"Hotel Name\"] = \"\"\n",
-    "#hotel_df.head(10)"
+    "hotel_df[\"Hotel Name\"] = \"\"\n",
+    "hotel_df.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -768,7 +768,7 @@
        "23  Sheraton Kauai Coconut Beach Resort  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -807,40 +807,190 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 7. Drop the rows where there is no Hotel Name.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'clean_hotel_df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-20-48445eb9c0ec>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0moutput_data_file\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"vacation_search/weatherpy_vacation.csv\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m# 8b. Export the City_Data into a csv\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mclean_hotel_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput_data_file\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindex_label\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"City_ID\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'clean_hotel_df' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Hotel Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Atuona</td>\n",
+       "      <td>PF</td>\n",
+       "      <td>79.11</td>\n",
+       "      <td>-9.8000</td>\n",
+       "      <td>-139.0333</td>\n",
+       "      <td>Villa Enata</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>San Carlos Del Zulia</td>\n",
+       "      <td>VE</td>\n",
+       "      <td>80.11</td>\n",
+       "      <td>9.0000</td>\n",
+       "      <td>-71.9135</td>\n",
+       "      <td>Hotel El Manantial</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Vaini</td>\n",
+       "      <td>TO</td>\n",
+       "      <td>87.96</td>\n",
+       "      <td>-21.2000</td>\n",
+       "      <td>-175.2000</td>\n",
+       "      <td>Keleti Beach Resort</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Cockburn Town</td>\n",
+       "      <td>TC</td>\n",
+       "      <td>77.88</td>\n",
+       "      <td>21.4612</td>\n",
+       "      <td>-71.1419</td>\n",
+       "      <td>Osprey Beach Hotel</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Rikitea</td>\n",
+       "      <td>PF</td>\n",
+       "      <td>78.44</td>\n",
+       "      <td>-23.1203</td>\n",
+       "      <td>-134.9692</td>\n",
+       "      <td>People ThankYou</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Nabire</td>\n",
+       "      <td>ID</td>\n",
+       "      <td>76.17</td>\n",
+       "      <td>-3.3667</td>\n",
+       "      <td>135.4833</td>\n",
+       "      <td>Hotel Nusantara Nabire</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Lorengau</td>\n",
+       "      <td>PG</td>\n",
+       "      <td>83.61</td>\n",
+       "      <td>-2.0226</td>\n",
+       "      <td>147.2712</td>\n",
+       "      <td>Lorengau Harbourside Hotel</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Mount Gambier</td>\n",
+       "      <td>AU</td>\n",
+       "      <td>76.87</td>\n",
+       "      <td>-37.8333</td>\n",
+       "      <td>140.7667</td>\n",
+       "      <td>The Commodore</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>Kapaa</td>\n",
+       "      <td>US</td>\n",
+       "      <td>79.12</td>\n",
+       "      <td>22.0752</td>\n",
+       "      <td>-159.3190</td>\n",
+       "      <td>Sheraton Kauai Coconut Beach Resort</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>Dhidhdhoo</td>\n",
+       "      <td>MV</td>\n",
+       "      <td>78.37</td>\n",
+       "      <td>6.8833</td>\n",
+       "      <td>73.1000</td>\n",
+       "      <td>Dhidhoo beach</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    City Country  Max Temp      Lat       Lng  \\\n",
+       "0                 Atuona      PF     79.11  -9.8000 -139.0333   \n",
+       "1   San Carlos Del Zulia      VE     80.11   9.0000  -71.9135   \n",
+       "5                  Vaini      TO     87.96 -21.2000 -175.2000   \n",
+       "8          Cockburn Town      TC     77.88  21.4612  -71.1419   \n",
+       "11               Rikitea      PF     78.44 -23.1203 -134.9692   \n",
+       "13                Nabire      ID     76.17  -3.3667  135.4833   \n",
+       "18              Lorengau      PG     83.61  -2.0226  147.2712   \n",
+       "21         Mount Gambier      AU     76.87 -37.8333  140.7667   \n",
+       "23                 Kapaa      US     79.12  22.0752 -159.3190   \n",
+       "24             Dhidhdhoo      MV     78.37   6.8833   73.1000   \n",
+       "\n",
+       "                             Hotel Name  \n",
+       "0                           Villa Enata  \n",
+       "1                    Hotel El Manantial  \n",
+       "5                   Keleti Beach Resort  \n",
+       "8                    Osprey Beach Hotel  \n",
+       "11                      People ThankYou  \n",
+       "13               Hotel Nusantara Nabire  \n",
+       "18           Lorengau Harbourside Hotel  \n",
+       "21                        The Commodore  \n",
+       "23  Sheraton Kauai Coconut Beach Resort  \n",
+       "24                        Dhidhoo beach  "
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 8a. Create the output File (CSV)\n",
-    "output_data_file = \"vacation_search/weatherpy_vacation.csv\"\n",
-    "# 8b. Export the City_Data into a csv\n",
-    "clean_hotel_df.to_csv(output_data_file, index_label=\"City_ID\")\n"
+    "# 7. Drop the rows where there is no Hotel Name.\n",
+    "nan_value = float(\"NaN\")\n",
+    "\n",
+    "for index, row in hotel_df.iterrows():\n",
+    "    hotel_df.replace(\"\", nan_value, inplace=True)\n",
+    "    hotel_df.dropna(subset=[\"Hotel Name\"], inplace=True)\n",
+    "\n",
+    "hotel_df.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 8a. Create the output File (CSV)\n",
+    "output_data_file = \"weatherpy_vacation.csv\"\n",
+    "# 8b. Export the City_Data into a csv\n",
+    "hotel_df.to_csv(output_data_file, index_label=\"City_ID\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -850,22 +1000,37 @@
     "<dt>Hotel Name</dt><dd>{Hotel Name}</dd>\n",
     "<dt>City</dt><dd>{City}</dd>\n",
     "<dt>Country</dt><dd>{Country}</dd>\n",
-    "<dt>Current Weather</dt><dd>{WxDescription} and {Max Temp} °F</dd>\n",
+    "<dt>Current Weather</dt><dd>{Max Temp} °F</dd>\n",
     "</dl>\n",
     "\"\"\"\n",
     "\n",
     "# 10a. Get the data from each row and add it to the formatting template and store the data in a list.\n",
-    "hotel_info = [info_box_template.format(**row) for index, row in clean_hotel_df.iterrows()]\n",
+    "hotel_info = [info_box_template.format(**row) for index, row in hotel_df.iterrows()]\n",
     "\n",
     "# 10b. Get the latitude and longitude from each row and store in a new DataFrame.\n",
-    "locations = clean_hotel_df[[\"Lat\", \"Lng\"]]"
+    "locations = hotel_df[[\"Lat\", \"Lng\"]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "331903d2b9fb45319d335dea95dfabc9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# 11a. Add a marker layer for each city to the map. \n",
     "locations = hotel_df[[\"Lat\", \"Lng\"]]\n",
@@ -883,13 +1048,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save map figure to .png file\n",
-    "output_figure_file = \"vacation_search/weatherpy_vacation_map.png\"\n",
-    "fig.savefig(output_figure_file)"
+    "output_figure_file = \"weatherpy_vacation_map.png\"\n",
+    "#fig.savefig(output_figure_file)"
    ]
   },
   {
